fix: align rich text editor spacing to prevent toolbar overlap

--- a/app/javascript/stylesheets/_rich_text.scss
+++ b/app/javascript/stylesheets/_rich_text.scss
@@ -3,6 +3,7 @@
   .ProseMirror {
     > * {
       margin-bottom: spacer(4);
+      margin-top: spacer(4);
     }
   }
 
